--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/vehicleInsurance
 spring.datasource.username=postgres
 spring.datasource.password=Om@123$
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vehicleinsuranceapp@gmail.com
+spring.mail.password=yafiyfhnwrqsapqz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
